--- a/website/styles/Menu.module.css
+++ b/website/styles/Menu.module.css
@@ -5,6 +5,7 @@
   top: 0;
   right: 0;
   pointer-events: none;
+  z-index: -1;
 }
 .draggable {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
